# QuickChat

./: .gitignore  README.md
ChatServer/: .clangd  CMakeLists.txt  ChatServer  config.ini  main.cpp
ChatServer/.cache/clangd/index/: AsioPool.cpp.83EC3F70036D5F33.idx  AsioPool.h.9A2EE6D267D13C84.idx  ChatGrpcClient.cpp.8274C6FC8F3666F4.idx  ChatGrpcClient.h.1C21AB261F7E107E.idx  ChatGrpcServer.cpp.500FDAD410A867BE.idx  ChatGrpcServer.h.28F9393476C75482.idx  ConfigManager.h.1A0B8A3E524E6C10.idx  DistributedLock.cpp.B58F451C141647B2.idx  DistributedLock.h.6EC452EC6968490B.idx  LogicSystem.cpp.476E2756E8F633BD.idx  LogicSystem.h.03A02B51E5A26D0E.idx  MsgNode.cpp.EAA5BF1D7E73696A.idx  MsgNode.h.45DEA5A4A2937D42.idx  MysqlDao.cpp.22F5D1DF486B2FE6.idx  MysqlDao.h.83C05BB6FC4C7949.idx  MysqlManager.cpp.51E0050AE8E1D9A5.idx  MysqlManager.h.67498826F08EC3B5.idx  RPCPool.h.EEA394A6D47CCBB2.idx  RedisManager.cpp.D7D7A6CF64DDF5C4.idx  RedisManager.h.95843D3A57A5F13C.idx  Server.cpp.15352CCEBF1279BB.idx  Server.h.B23D8BBC745D5864.idx  Session.cpp.138BCEB76A698537.idx  Session.h.E311CF951A07F090.idx  Singleton.h.7400F1F00F99E337.idx  StatusClient.cpp.54659CF3BA8E6D72.idx  StatusClient.h.AE478CE978A50DF6.idx  UserInfo.h.7C936EE9137C18A8.idx  UserManager.cpp.E76527F8A62F4CDE.idx  UserManager.h.E9A7608ED73D125B.idx  const.cpp.B7CE62EE04296985.idx  const.h.AE1EAA50DEE49B47.idx  im.pb.cc.26B8DEAE5D0FE4C3.idx  im.pb.h.679D124A8A55B83D.idx  main.cpp.8241D6F8EC3606BF.idx  message.grpc.pb.cc.043D2B37EA270437.idx  message.grpc.pb.h.20F26B2781EFB291.idx  message.pb.cc.9D757A85C20701A7.idx  message.pb.h.CFE5CC86568CB042.idx
ChatServer/.claw/sessions/: session-1775113726068.json
ChatServer/data/: UserInfo.h  im.proto
ChatServer/global/: ConfigManager.h  UserManager.h  const.h
ChatServer/grpc/: ChatGrpcClient.cpp  ChatGrpcClient.h  ChatGrpcServer.cpp  RPCPool.h  StatusClient.cpp  message.grpc.pb.cc  message.pb.cc  message.pb.h  message.proto
ChatServer/mysql/: MysqlDao.cpp  MysqlManager.cpp  MysqlManager.h
ChatServer/redis/: DistributedLock.cpp  RedisManager.cpp
ChatServer/server/: AsioPool.cpp  AsioPool.h  LogicSystem.cpp  LogicSystem.h  Server.cpp
ChatServer/session/: MsgNode.h  Session.cpp  Session.h
ChatServer2/: CMakeLists.txt  ChatServer2  config.ini  main.cpp
ChatServer2/.github/chatmodes/: gemini.chatmode.md
ChatServer2/data/: im.pb.cc  im.pb.h
ChatServer2/global/: UserManager.cpp  const.cpp  const.h
ChatServer2/grpc/: ChatGrpcServer.cpp  ChatGrpcServer.h  StatusClient.h  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
ChatServer2/mysql/: MysqlDao.cpp  MysqlDao.h
ChatServer2/redis/: DistributedLock.h
ChatServer2/server/: LogicSystem.cpp  Server.h
ChatServer2/session/: MsgNode.cpp
CppChat/: CMakeLists.txt  config.ini  database.cpp  database.h  httpmanager.cpp  httpmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  stylemanager.cpp  stylemanager.h  tcpmanager.cpp  tcpmanager.h  usermanager.cpp  usermanager.h
CppChat/.claw/sessions/: session-1775098105207.json  session-1775101383730.json  session-1775101828661.json  session-1775102592670.json
CppChat/.cmake/api/v1/reply/: cache-v2-d15adc3be658560dd6df.json  cmakeFiles-v1-e2a49fa9420709ee1181.json  codemodel-v2-fa248f0793ad9a0e336e.json  directory-.-Release-b5858562b6b454b508d8.json  index-2025-12-05T02-16-23-0961.json  target-CppChat-Release-998e3c8a0d5c346601b2.json  target-CppChat_autogen-Release-03ac3ef93f0bddadfde2.json  target-CppChat_autogen_timestamp_deps-Release-3d70c1bb418f5daee0eb.json  target-OpenGL__EGL-Release-d378481b0716e10d2e90.json  target-OpenGL__GL-Release-39957f7798f234679871.json  target-OpenGL__GLES2-Release-3269cb62049e54b9150a.json  target-OpenGL__GLES3-Release-92a601a854644693384f.json  target-OpenGL__GLU-Release-cd6265e0d442b9f194dc.json  target-OpenGL__GLX-Release-5d408938a84bea8aa228.json  target-OpenGL__OpenGL-Release-a83f232f5818711a017b.json  target-Qt6__Concurrent-Release-21549d41c33224f4a98e.json  target-Qt6__Core-Release-65432e4206a40736ae08.json  target-Qt6__DBus-Release-21a12cd6ab7dbdbe8a3e.json  target-Qt6__Gui-Release-504347a3eb1b5076c55b.json  target-Qt6__Multimedia-Release-7e1b9b70943faf6934c3.json  target-Qt6__MultimediaWidgets-Release-cd82c7297ce4eb5ef847.json  target-Qt6__Network-Release-30a38a341b646b992f79.json  target-Qt6__QComposePlatformInputContextPlugin-Release-bfd703895943143fe4e9.json  target-Qt6__QEglFSEmulatorIntegrationPlugin-Release-8c14b31eff0533f93e89.json  (+318 more)
CppChat/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_CppChat_d82c6dfd7c.cmake
CppChat/LoginInterface/: forgotscreen.cpp  forgotscreen.h  loginscreen.cpp  loginscreen.h  registerscreen.cpp  registerscreen.h
CppChat/MainInterface/: mainscreen.cpp  mainscreen.h  sidebarpart.cpp  sidebarpart.h  toptitlepart.cpp  toptitlepart.h
CppChat/MainInterface/.claw/sessions/: session-1775487598937-0.jsonl  session-1775488284807-0.jsonl  session-1775488351537-0.jsonl  session-1775488419113-0.jsonl  session-1775488438059-0.jsonl  session-1775488909059-0.jsonl  session-1775488922291-0.jsonl  session-1775489014545-0.jsonl  session-1775489084025-0.jsonl
CppChat/MainInterface/Chat/: chatpart.cpp  chatpart.h
CppChat/MainInterface/Chat/ChatArea/: chatarea.cpp  chatarea.h
CppChat/MainInterface/Chat/ChatTopArea/: chattoparea.cpp  chattoparea.h
CppChat/MainInterface/List/: listpart.cpp  listpart.h
CppChat/MainInterface/List/FriendsList/: frienditem.h  frienditemdelegate.cpp  frienditemdelegate.h  friendslistpart.cpp  friendslistpart.h  friendsmodel.cpp  friendsmodel.h
CppChat/MainInterface/List/MessagesList/: messageitemdelegate.cpp  messageitemdelegate.h  messageslistpart.cpp  messageslistpart.h  messagesmodel.cpp  messagesmodel.h
CppChat/Properties/: global.cpp  global.h  imagecropperdialog.cpp  imagecropperdialog.h  signalrouter.cpp  signalrouter.h  singleton.h  sourcemanager.cpp  sourcemanager.h
CppChat/Styles/: stylesheetBlue.qss  stylesheetDark.qss  stylesheetLight.qss
CppChat/proto/: gen-proto.sh  im.pb.cc  im.pb.h  im.proto
GateWayServer/: CMakeLists.txt  (+2 more)
(+66 files in other folders)
